[gd_scene load_steps=22 format=3 uid="uid://dkpoww0eg0jew"]

[ext_resource type="Texture2D" uid="uid://drf08jmjxw7wi" path="res://img/aset/game_2/background_2.png" id="1_e3v0g"]
[ext_resource type="Script" path="res://gameover_1.gd" id="1_wn0le"]
[ext_resource type="Texture2D" uid="uid://iwq1mwgd8jh2" path="res://img/aset/game_1/taman_2.png" id="2_whqyk"]
[ext_resource type="Theme" uid="uid://dg610a6wgjmd8" path="res://img/aset/game_2/tofuw_ngomong_2.tres" id="3_c6rld"]
[ext_resource type="Texture2D" uid="uid://bx5m6iugmyv7t" path="res://img/aset/coba_lagi.png" id="5_q4eql"]
[ext_resource type="Texture2D" uid="uid://j7rskavoih" path="res://img/aset/tanya.png" id="6_cel0v"]
[ext_resource type="Texture2D" uid="uid://rhswvp3ls60y" path="res://img/aset/setting.png" id="8_l5rnw"]
[ext_resource type="Theme" uid="uid://cb21ut3dnxurk" path="res://tres/tombol.tres" id="9_2l6gt"]
[ext_resource type="Texture2D" uid="uid://ckab6o3pielwx" path="res://img/aset/belakang_pilihan_3.png" id="9_x2frj"]
[ext_resource type="Theme" uid="uid://e6xhwpqmlsde" path="res://tres/tombol_menu.tres" id="10_5mv7y"]
[ext_resource type="AudioStream" uid="uid://dvn8hpr1ybn2g" path="res://img/aset/music/failfare.mp3" id="10_6it34"]
[ext_resource type="SystemFont" uid="uid://ccndfb05mlrvo" path="res://tres/Font_tombol.tres" id="11_gvfqs"]

[sub_resource type="CanvasTexture" id="CanvasTexture_fqk7r"]

[sub_resource type="Animation" id="Animation_j8kbq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_bw2uy"]
resource_name = "tofuw_ngomong_game2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kqo4d"]
_data = {
"RESET": SubResource("Animation_j8kbq"),
"tofuw_ngomong_game2": SubResource("Animation_bw2uy")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jjwgy"]
bg_color = Color(0.241895, 0.356492, 0.48954, 1)
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gmgu7"]
bg_color = Color(0.369507, 0.50858, 0.674106, 1)
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_15qi5"]
bg_color = Color(0.243137, 0.356863, 0.490196, 1)
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35

[sub_resource type="Theme" id="Theme_h3f27"]
Button/styles/hover = SubResource("StyleBoxFlat_jjwgy")
Button/styles/normal = SubResource("StyleBoxFlat_gmgu7")
Button/styles/pressed = SubResource("StyleBoxFlat_15qi5")

[sub_resource type="SystemFont" id="SystemFont_thd44"]
font_names = PackedStringArray("Pixellari")

[node name="gameover_1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wn0le")

[node name="TextureRect3" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0.756863)
layout_mode = 2
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("2_whqyk")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="maskot" type="Sprite2D" parent="MarginContainer/VBoxContainer"]
position = Vector2(1089, 577)
scale = Vector2(0.487037, 0.487037)
texture = ExtResource("5_q4eql")
flip_h = true

[node name="Background2" type="Sprite2D" parent="MarginContainer/VBoxContainer"]
visible = false
position = Vector2(546.222, 288)
scale = Vector2(0.568519, 0.52963)
texture = ExtResource("1_e3v0g")

[node name="triangle" type="TextureRect" parent="MarginContainer"]
visible = false
layout_mode = 2
texture = SubResource("CanvasTexture_fqk7r")
expand_mode = 1

[node name="reaksi_maskot" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="Tofuw_Ngomong" type="Control" parent="MarginContainer/reaksi_maskot"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("3_c6rld")

[node name="Label" type="Label" parent="MarginContainer/reaksi_maskot/Tofuw_Ngomong"]
visible = false
layout_mode = 0
offset_left = 226.0
offset_top = 337.0
offset_right = 284.0
offset_bottom = 394.0
text = "Sedang Apa Dia Lakukan?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer/reaksi_maskot/Tofuw_Ngomong"]
libraries = {
"": SubResource("AnimationLibrary_kqo4d")
}

[node name="Tanya" type="Sprite2D" parent="MarginContainer/reaksi_maskot/Tofuw_Ngomong"]
position = Vector2(150, 539)
scale = Vector2(0.412963, 0.412963)
texture = ExtResource("6_cel0v")

[node name="soal" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="Keluar" type="Button" parent="MarginContainer/Control"]
visible = false
layout_mode = 0
offset_left = 1.0
offset_top = 5.0
offset_right = 39.0
offset_bottom = 35.0
theme = SubResource("Theme_h3f27")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Control/Keluar"]
layout_mode = 0
offset_left = 8.0
offset_top = 3.0
offset_right = 29.0
offset_bottom = 24.0
texture = ExtResource("8_l5rnw")
expand_mode = 1

[node name="hitam" type="TextureRect" parent="MarginContainer/Control"]
modulate = Color(0, 0, 0, 0.521569)
layout_mode = 2
offset_right = 1280.0
offset_bottom = 720.0
texture = SubResource("CanvasTexture_fqk7r")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Control"]
layout_mode = 0
offset_left = 314.0
offset_top = 165.0
offset_right = 954.0
offset_bottom = 589.0
texture = ExtResource("9_x2frj")
expand_mode = 1

[node name="Label" type="Label" parent="MarginContainer/Control"]
layout_mode = 0
offset_left = 494.0
offset_top = 228.0
offset_right = 766.0
offset_bottom = 279.0
theme_override_fonts/font = SubResource("SystemFont_thd44")
theme_override_font_sizes/font_size = 50
text = "GAME OVER"

[node name="kembali" type="Button" parent="MarginContainer/Control"]
layout_mode = 0
offset_left = 560.0
offset_top = 370.0
offset_right = 705.0
offset_bottom = 434.0
theme = ExtResource("9_2l6gt")
theme_override_fonts/font = ExtResource("11_gvfqs")
theme_override_font_sizes/font_size = 27
text = "KEMBALI"

[node name="home" type="Button" parent="MarginContainer/Control"]
layout_mode = 0
offset_left = 558.0
offset_top = 442.0
offset_right = 703.0
offset_bottom = 506.0
theme = ExtResource("10_5mv7y")
theme_override_fonts/font = ExtResource("11_gvfqs")
theme_override_font_sizes/font_size = 27
text = "MENU"

[node name="Retry" type="Button" parent="MarginContainer/Control"]
layout_mode = 0
offset_left = 561.0
offset_top = 298.0
offset_right = 706.0
offset_bottom = 362.0
theme = ExtResource("9_2l6gt")
theme_override_fonts/font = ExtResource("11_gvfqs")
theme_override_font_sizes/font_size = 30
text = "ULANG"

[node name="Failfare" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_6it34")
autoplay = true

[connection signal="pressed" from="MarginContainer/Control/kembali" to="." method="_on_kembali_pressed"]
[connection signal="pressed" from="MarginContainer/Control/home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="MarginContainer/Control/Retry" to="." method="_on_retry_pressed"]
